<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_room"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/roomid"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_group"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/groupid"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_layer"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/layerid"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_first"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/firstsn"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_last"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/lastsn"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:focusable="true"
                android:text="@string/lbl_status"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/status"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawSelectorOnTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
